KiCad ChangeLog 2010
====================

Please add newer entries at the top, list the date and your name with
email address.

2010-Jan-27 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++ Pcbnew:
    Code cleaning about visibility variables (duplicates) in draw functions.
    Removed old color and visiblity dialog
    work in progress

2010-Jan-24 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++ Pcbnew:
    in variable names, change non existent word Hight to High
    Remove redundant tool in left toolbar (option toolbar)
    (this option is now in layers manager)
    Show layers in horizontal combo box in same order as in layer manager.

++all:
    minor code cleaning.

2010-Jan-23 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew's PCB_LAYER_WIDGET
    Removed wxformbuilder dependency from LAYER_WIDGET, thus killing off
    layer_widget_base.* and panel_layer_select.fbp.
    Added aPointSize to LAYER_WIDGET constructor so it uses that font size.
    Removed layer_widget.h from wxPcbStruct.h for faster compiles with less
    dependencies, and this meant moving the class LYRS out of
    class WinEDA_PcbFrame.  While doing that I renamed it to PCB_LAYER_WIDGET.
    Integration of PCB_LAYER_WIDGET into WinEDA_PcbFrame to fully support
    the layer change logic. Added syncLayerWidget(),
  * WinEDA_PcbFrame:
    Added syncLayerWidget(), syncLayerBox() (via a rename), setActiveLayer(),
    and getActiveLayer().
    Use a font size in PCB_LAYER_WIDGET 80% of the system font size for systems
    with screen resolution height <= 900, or 100% if not.  See WinEDA_PcbFrame
    constructor.
  * See TODO.txt for more things that need to be done.

