@@ -4,6 +4,12 @@ KiCad ChangeLog 2010
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2010-Jan-28 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
+================================================================================
+ *fixed eeschema crash when using the hotkey m (move) command.
+* Pcbnew :added option to show/hide footprints values and/or references
+  See if show/hide footprints texts option is now always useful.
+
 2010-Jan-27 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
 ================================================================================
 ++ Pcbnew:
